# pypang

./: .env.example  .gitignore  LICENSE  README.md  app.list.json  bump-version.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
pypang/: __init__.py  app.py  app_paths.py  cli.py  client.py  config.py  errors.py  references.py  storage.py
pypang/static/: app.css  app.js
pypang/templates/: base.html  callback.html  index.html
